Grease Pencil Drawing don't Update after paste #94089

Closed
opened 2021-12-15 02:43:34 +01:00 by Adam Earle · 12 comments

System Information
Computer specs:
Screen - Huion (on a $100 computer arm )

  • Viano TV

Operating System - 64 bit Windows 10 Pro

  • Version 4
  • Pen Touch Support
    Processor - Intel Core i7-8700k CPU @3.70GHz 3.70GHz
    Ram - 32 GB
    Graphics card - NVIDIA GeForce GTX 1070
  • NVIDIA GeForce GTX 960

system-info.txt

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: (newest version of Blender that worked as expected)

Short description of error
Copying grease pencil keyframes across from one object to the next doesn't update until the keyframes are selected or the dope sheet it clicked in

Exact steps for others to reproduce the error

  • Open .blend file
  • Select keyframes of stroke.001 between 20-40 and copy
  • Uncheck Only Show Selected
  • Select lines ad colors of stroke one
  • Move play head to 20
  • Paste them
  • Move play head, object will not update (need to click somewhere on Dope Sheet to update it
    Test File:
    #94089.blend
    Drawing Don't Update.m4v
**System Information** Computer specs: Screen - Huion (on a $100 computer arm ) - Viano TV Operating System - 64 bit Windows 10 Pro - Version 4 - Pen Touch Support Processor - Intel Core i7-8700k CPU @3.70GHz 3.70GHz Ram - 32 GB Graphics card - NVIDIA GeForce GTX 1070 - NVIDIA GeForce GTX 960 [system-info.txt](https://archive.blender.org/developer/F12744129/system-info.txt) **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: (newest version of Blender that worked as expected) **Short description of error** Copying grease pencil keyframes across from one object to the next doesn't update until the keyframes are selected or the dope sheet it clicked in **Exact steps for others to reproduce the error** - Open .blend file - Select keyframes of stroke.001 between 20-40 and copy - Uncheck `Only Show Selected` - Select lines ad colors of stroke one - Move play head to 20 - Paste them - Move play head, object will not update (need to click somewhere on Dope Sheet to update it Test File: [#94089.blend](https://archive.blender.org/developer/F12745913/T94089.blend) [Drawing Don't Update.m4v](https://archive.blender.org/developer/F12744182/Drawing_Don_t_Update.m4v)

Added subscriber: @AdamEarle

Added subscriber: @AdamEarle

#94904 was marked as duplicate of this issue

#94904 was marked as duplicate of this issue

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @antoniov

Added subscriber: @antoniov

I can confirm in 3.1 also... I'm going to take a look.

I can confirm in 3.1 also... I'm going to take a look.
Antonio Vazquez self-assigned this 2022-01-14 13:26:22 +01:00

Added subscriber: @adm

Added subscriber: @adm

This issue was referenced by 6ea0ecdc51

This issue was referenced by 6ea0ecdc51cb826dbda7bd49d0ce11b87385cbe8

This issue was referenced by 49f25ae23c

This issue was referenced by 49f25ae23ce8570b0aa7df07a5ed53ecf835f933

This issue was referenced by bcca7bf975

This issue was referenced by bcca7bf9755c0f452559ca7860fbdce2b8611d08

This issue was referenced by c0432d5edb

This issue was referenced by c0432d5edb23e1c6b70862895efa0599c47ec301

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94089
There is no content yet.