Fix T94089: GPencil Drawing don't Update after paste in Dopesheet

When paste new frames, the datablock need to be tagged to update the drawings.